<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.thedayofftripguide.snb_activity"
        android:layout_margin="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/snb"
            android:layout_centerInParent="true"
            android:id="@+id/snbImage"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/snbHeader"
            android:text="@string/snbHeader"
            android:layout_alignParentTop="true"
            android:textSize="18sp"
            android:textColor="@color/textColor1"/>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/snbThingsHeader"
            android:layout_below="@+id/snbImage"
            android:text="@string/snbThingsHeader"
            android:textSize="24sp"
            android:textColor="@color/textColor1"/>
        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/snbThingsHeader"
            android:text="@string/snbThings"
            android:textSize="16sp"
            android:textColor="@color/textColor1"/>
    </RelativeLayout>
</ScrollView>