<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/camp_p" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.example.android.thedayofftripguide.camp_activity">

            <TextView
                android:id="@+id/campHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:text="@string/campHeader"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/campThingsHeader"
                style="@style/HeaderStyle"
                android:layout_below="@+id/campHeader"
                android:text="@string/ThingsHeader" />

            <TextView
                android:id="@+id/campThingsText"
                style="@style/ListStyle"
                android:layout_below="@+id/campThingsHeader"
                android:text="@string/campThings" />

            <!-- LOCATIONS -->

            <TextView
                android:id="@+id/locationsHeader"
                style="@style/HeaderStyle"
                android:layout_below="@+id/campThingsText"
                android:text="Interesting locations:" />
            <!-- LOCATION 1 -->
            <TextView
                android:id="@+id/location1Text"
                style="@style/ListStyle"
                android:layout_below="@+id/locationsHeader"
                android:text="1. Kyiv Sea, near Lutizh." />

            <LinearLayout
                android:id="@+id/details1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/location1Text"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/location1map"
                    style="@style/ButtonStyle"
                    android:layout_weight="1"
                    android:onClick="location1map"
                    android:text="@string/map" />

                <Button
                    android:id="@+id/location1detail"
                    style="@style/ButtonStyle"
                    android:layout_weight="1"
                    android:onClick="location1detail"
                    android:text="@string/details" />
            </LinearLayout>

            <!-- LOCATION 2 -->

            <TextView
                android:id="@+id/location2Text"
                style="@style/ListStyle"
                android:layout_below="@+id/details1"
                android:text="2. Bakota, Chernivtsi region" />

            <LinearLayout
                android:id="@+id/details2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/location2Text"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/location2map"
                    style="@style/ButtonStyle"
                    android:layout_weight="1"
                    android:onClick="location2map"
                    android:text="@string/map" />

                <Button
                    android:id="@+id/location2detail"
                    style="@style/ButtonStyle"
                    android:layout_weight="1"
                    android:onClick="location2detail"
                    android:text="@string/details" />
            </LinearLayout>

            <!-- LOCATION 3 -->

            <TextView
                android:id="@+id/location3Text"
                style="@style/ListStyle"
                android:layout_below="@+id/details2"
                android:text="3. Korostyshiv careers, Zhitomyr region" />

            <LinearLayout
                android:id="@+id/details3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/location3Text"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/location3map"
                    style="@style/ButtonStyle"
                    android:layout_weight="1"
                    android:onClick="location3map"
                    android:text="@string/map" />

                <Button
                    android:id="@+id/location3detail"
                    style="@style/ButtonStyle"
                    android:layout_weight="1"
                    android:onClick="location3detail"
                    android:text="@string/details" />
            </LinearLayout>

            <!-- LINKS -->

            <TextView
                android:id="@+id/linksHeader"
                style="@style/HeaderStyle"
                android:layout_below="@+id/details3"
                android:text="Helpful resources:" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linksHeader"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/link1Text"
                    style="@style/ListStyle"
                    android:layout_below="@+id/linksHeader"
                    android:layout_weight="1"
                    android:onClick="goLink1"
                    android:text="@string/campLink1"
                    android:textStyle="" />

                <TextView
                    android:id="@+id/link2Text"
                    style="@style/ListStyle"
                    android:layout_below="@+id/linksHeader"
                    android:layout_weight="1"
                    android:onClick="goLink2"
                    android:text="@string/campLink2"
                    android:textStyle="" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
